Change player names to last names

--- a/challenge-4.ipynb
+++ b/challenge-4.ipynb
@@ -103,417 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>women_players</th>\n",
-       "      <th>appearances</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mona Barthel</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bethanie Mattek-Sands</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Monica Niculescu</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sloane Stephens</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Camila Giorgi</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Johanna Larsson</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Simona Halep</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Lucie Hradecka</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Jie Zheng</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Na Li</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Varvara Lepchenko</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Francesca Schiavone</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Kurumi Nara</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Karolina Pliskova</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Julia Goerges</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Zarina Diyas</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Carla Suarez Navarro</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Karin Knapp</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Dominika Cibulkova</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Casey Dellacqua</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Stefanie Voegele</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Annika Beck</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Tsvetana Pironkova</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Yvonne Meusburger</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Marina Erakovic</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Olga Govortsova</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Dinah Pfizenmaier</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Garbine Muguruza</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Barbora Zahlavova Strycova</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Agnieszka Radwanska</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>L.Tsurenko</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>P.Martic</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>M.Puig</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>M.Erakovic</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>A.Radwanska</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>E.Vesnina</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>V.Dolonc</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>Ka.Pliskova</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>S.Soler-Espinosa</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>C.McHale</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>C.Giorgi</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>K.Kanepi</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>A.Riske</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>S-W.Hsieh</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>S.Lisicki</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>S.Halep</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>K.Knapp</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>K.Flipkens</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>S.Stephens</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>A.Cadantu</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>M.Keys</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>P.Cetkovska</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>B.Jovanovski</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>L.Robson</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>E.Birnerova</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>M.Larcher De Brito</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>T.Pironkova</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>M.Bartoli</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>C.Suarez Navarro</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>K.Date-Krumm</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>113 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  women_players  appearances\n",
-       "0                  Mona Barthel            3\n",
-       "1         Bethanie Mattek-Sands            4\n",
-       "2              Monica Niculescu            3\n",
-       "3               Sloane Stephens            4\n",
-       "4                 Camila Giorgi            2\n",
-       "5               Johanna Larsson            2\n",
-       "6                  Simona Halep            5\n",
-       "7                Lucie Hradecka            2\n",
-       "8                     Jie Zheng            6\n",
-       "9                         Na Li            7\n",
-       "10            Varvara Lepchenko            2\n",
-       "11          Francesca Schiavone            4\n",
-       "12                  Kurumi Nara            3\n",
-       "13            Karolina Pliskova            2\n",
-       "14                Julia Goerges            2\n",
-       "15                 Zarina Diyas            3\n",
-       "16         Carla Suarez Navarro            4\n",
-       "17                  Karin Knapp            2\n",
-       "18           Dominika Cibulkova            7\n",
-       "19              Casey Dellacqua            4\n",
-       "20             Stefanie Voegele            5\n",
-       "21                  Annika Beck            2\n",
-       "22           Tsvetana Pironkova            2\n",
-       "23            Yvonne Meusburger            3\n",
-       "24              Marina Erakovic            5\n",
-       "25              Olga Govortsova            2\n",
-       "26            Dinah Pfizenmaier            3\n",
-       "27             Garbine Muguruza            4\n",
-       "28   Barbora Zahlavova Strycova            2\n",
-       "29          Agnieszka Radwanska            6\n",
-       "..                          ...          ...\n",
-       "83                   L.Tsurenko            2\n",
-       "84                     P.Martic            3\n",
-       "85                       M.Puig            4\n",
-       "86                   M.Erakovic            3\n",
-       "87                  A.Radwanska            6\n",
-       "88                    E.Vesnina            2\n",
-       "89                     V.Dolonc            3\n",
-       "90                  Ka.Pliskova            2\n",
-       "91             S.Soler-Espinosa            2\n",
-       "92                     C.McHale            2\n",
-       "93                     C.Giorgi            3\n",
-       "94                     K.Kanepi            4\n",
-       "95                      A.Riske            2\n",
-       "96                    S-W.Hsieh            2\n",
-       "97                    S.Lisicki            7\n",
-       "98                      S.Halep            2\n",
-       "99                      K.Knapp            4\n",
-       "100                  K.Flipkens            6\n",
-       "101                  S.Stephens            5\n",
-       "102                   A.Cadantu            2\n",
-       "103                      M.Keys            3\n",
-       "104                 P.Cetkovska            3\n",
-       "105                B.Jovanovski            2\n",
-       "106                    L.Robson            3\n",
-       "107                 E.Birnerova            3\n",
-       "108          M.Larcher De Brito            3\n",
-       "109                 T.Pironkova            4\n",
-       "110                   M.Bartoli            7\n",
-       "111            C.Suarez Navarro            4\n",
-       "112                K.Date-Krumm            3\n",
-       "\n",
-       "[113 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.read_sql_query('''\n",
     "                    WITH t1 AS (SELECT DISTINCT al.player1 ALp1, COUNT(al.player1) ALc1\n",
@@ -569,29 +161,35 @@
     "                                    ON wp1.alp1 = wp2.alp2 OR wp1.flp1 = wp2.flp2\n",
     "                                       OR wp1.uslp1 = wp2.uslp2 OR wp1.wlp1 = wp2.wlp2),\n",
     "                                       \n",
-    "                        unique_women AS (SELECT alp1 AS women_players\n",
+    "                        unique_women AS (SELECT RIGHT(alp1, CHAR_LENGTH(alp1) - POSITION(' ' IN alp1))\n",
+    "                                         AS women_players\n",
     "                                    FROM women_app\n",
     "                                    WHERE alp1 IS NOT NULL\n",
     "                                    UNION\n",
-    "                                    SELECT flp1\n",
+    "                                    SELECT RIGHT(flp1, CHAR_LENGTH(flp1 - POSITION(' ' IN flp1))\n",
     "                                    FROM women_app\n",
     "                                    WHERE flp1 IS NOT NULL\n",
     "                                    UNION \n",
-    "                                    SELECT uslp1\n",
+    "                                    SELECT RIGHT(uslp1, CHAR_LENGTH(uslp1 - POSITION(' ' IN uslp1))\n",
     "                                    FROM women_app\n",
     "                                    WHERE uslp1 IS NOT NULL\n",
     "                                    UNION\n",
-    "                                    SELECT wlp1\n",
+    "                                    SELECT RIGHT(wlp1, CHAR_LENGTH(wlp1 - POSITION('.' IN wlp1))\n",
     "                                    FROM women_app\n",
-    "                                    WHERE wlp1\n",
-    "                                    IS NOT NULL)\n",
+    "                                    WHERE wlp1 IS NOT NULL AND ),\n",
+    "                                    \n",
+    "                    tourn_appearances AS (SELECT uw.women_players, wa.aus_ladies_app australian_appearances, \n",
+    "                                       wa.french_ladies_app french_appearances, wa.us_ladies_app US_appearances,\n",
+    "                                       wa.wimb_ladies_app wimbledon_appearances\n",
+    "                                    FROM unique_women uw\n",
+    "                                    JOIN women_app wa\n",
+    "                                        ON wa.alp1 =uw.women_players OR \n",
+    "                                        wa.flp1 = uw.women_players\n",
+    "                                        OR wa.uslp1 = uw.women_players\n",
+    "                                        OR wa.wlp1 = uw.women_players)\n",
     "                    \n",
-    "                    SELECT uw.women_players, (wa.aus_ladies_app + wa.french_ladies_app + \n",
-    "                                              wa.us_ladies_app + wa.wimb_ladies_app) appearances\n",
-    "                    FROM unique_women uw\n",
-    "                    JOIN women_app wa\n",
-    "                    ON wa.alp1 = uw.women_players OR wa.flp1 = uw.women_players OR\n",
-    "                       wa.uslp1 = uw.women_players OR wa.wlp1 = uw.women_players;\n",
+    "                    SELECT *\n",
+    "                    FROM unique_women;\n",
     "                  ''', cnx)"
    ]
   },
